# probanch

./: .gitignore  .gitmodules  INSTALL.md  LICENSE  README.md
anchor_caffe/: CMakeLists.txt  README.md  package.xml
anchor_caffe/include/anchor_caffe/: classifier.hpp  cv_classifier.hpp
anchor_caffe/model/: reground.prototxt  reground_words.txt
anchor_caffe/src/: anchor_caffe.cpp  object_classification.cpp  ros_caffe_test.cpp
anchor_logic/: README.md
anchor_logic/reasoning/: CMakeLists.txt  package.xml
anchor_msgs/: CMakeLists.txt  package.xml
anchor_msgs/msg/: Anchor.msg  AnchorLabelConfiguration.msg  AnchorLabelConfigurationProbs.msg  AnchorSpatial.msg  Association.msg  AssociationArray.msg  CaffeAttribute.msg  ClusterArray.msg  ColorAttribute.msg  Contour.msg  Descriptor.msg  Display.msg  DisplayArray.msg  Inference.msg  InferenceArray.msg  Instruction.msg  LogicAnchor.msg  LogicAnchorArray.msg  LogicAssociationArray.msg  LogicHiddenAnchorsID.msg  LogicMeanPosHidden.msg  LogicMeanPosHiddenArray.msg  LogicParticlePlot.msg  Object.msg  ObjectArray.msg  SemanticAnchor.msg  SemanticAnchorArray.msg  ShapeAttribute.msg  Snapshot.msg  SnapshotArray.msg
anchor_msgs/srv/: AnchorRequest.srv  LanguageGrounding.srv  SpatialRequest.srv
anchor_utils/: CMakeLists.txt  README.md  package.xml  result.txt
anchor_utils/include/anchor_utils/: database.hpp  ml.hpp
anchor_utils/src/: database.cpp  db_clean.cpp  db_test.cpp  ml.cpp  ml_test.cpp
anchoring/: CMakeLists.txt  README.md  package.xml
anchoring/bags/: bags_with_movements_01.bag  bags_with_movements_02.bag  bags_with_movements_03.bag  bags_with_movements_04.bag  ball_and_cup_1.bag  ball_and_cup_2.bag
anchoring/cmake/: FindMongoClient.cmake
anchoring/include/anchoring/: anchor.hpp  anchor_annotation.hpp  anchor_collection.hpp  anchor_container.hpp  anchor_management.hpp  attribute.hpp  database.hpp  percept.hpp
anchoring/launch/: anchoring.launch  anchoring_display_dynamic_tf.bak  anchoring_display_dynamic_tf.launch  anchoring_display_static_tf.launch  anchoring_offline.launch  anchoring_offline_occluded.launch  anchoring_offline_with_tracking.launch  anchoring_offline_without_tracking.launch  anchoring_reasoning_offline.launch  anchoring_with_display.launch  anchoring_with_display_alvar.launch  anchoring_with_inference.launch
anchoring/models/: svm.yml
anchoring/src/: anchor.cpp  anchor_annotation.cpp  anchor_collection.cpp  anchor_container.cpp  anchor_management.cpp  attribute.cpp  database.cpp  percept.cpp
dispaly/: CMakeLists.txt  package.xml
dispaly/src/: anchor_viewer.cpp
display/: CMakeLists.txt  package.xml
display/html/: demo.html  index.html
display/html/js/: opencv.js  roslib.min.js
display/launch/: web_interface.launch
display/scripts/: video_processing.py
display/src/: anchor_recorder.cpp  anchor_viewer.cpp  img_to_base64.cpp
grounding/object_classification/: CMakeLists.txt  package.xml
grounding/object_classification/include/anchor_caffe/: caffe_classifier.hpp
grounding/object_classification/model/: download_model.py  reground_words.txt
grounding/object_classification/src/: object_classification.cpp  ros_caffe_test.cpp
grounding/object_classification/srv/: CaffeService.srv
messages/anchor_msgs/: CMakeLists.txt  README.md
perception/: README.md
perception/ar_transform/: CMakeLists.txt  package.xml
perception/ar_transform/scripts/: transformer.py
perception/feature_extraction/: CMakeLists.txt  package.xml
perception/feature_extraction/include/feature_extraction/: feature_extraction.hpp  shades.hpp  visual_features.hpp
perception/feature_extraction/launch/: feature_extraction.launch
perception/feature_extraction/src/: feature_extraction.cpp  visual_features.cpp
perception/hand_tracking/: package.xml
perception/object_segmentation/: CMakeLists.txt  nodelet_plugins.xml  package.xml
perception/object_segmentation/include/object_segmentation/: object_calibration.hpp  object_segmentation.hpp  pcl_segmentation.hpp
perception/object_segmentation/launch/: object_segmentation_tf_dynamic.launch  object_segmentation_tf_static.launch
perception/object_segmentation/src/: object_calibration.cpp  object_segmentation.cpp  object_tracking.cpp  pcl_segmentation.cpp
perception/object_tracking/: package.xml
perception/object_tracking/include/object_tracking/: object_tracking.hpp
perception/object_tracking/launch/: tracking.launch
perceptual_pipeline/: README.md  README.me  iai_kinect2-master
perceptual_pipeline/ar_transform/: CMakeLists.txt
perceptual_pipeline/feature_extraction/: CMakeLists.txt  package.xml
perceptual_pipeline/feature_extraction/include/feature_extraction/: colors.hpp  feature_extraction.hpp  visual_features.hpp
perceptual_pipeline/feature_extraction/models/: colors.yml
perceptual_pipeline/feature_extraction/src/: feature_extraction.cpp  visual_features.cpp
perceptual_pipeline/hand_tracking/: CMakeLists.txt  package.xml
perceptual_pipeline/object_segmentation/: CMakeLists.txt  package.xml
perceptual_pipeline/object_tracking/: CMakeLists.txt  package.xml
reasoning/: .gitignore  CMakeLists.txt  README.md  package.xml
reasoning/launch/: behind_of.launch  collect_data_in_hand.launch  collect_data_occluded.launch  in_hand.launch  learned_in_hand.launch  multimodal_occluded.launch  occluded.launch  (+4 more)
utils/: README.md
utils/console/: CMakeLists.txt  package.xml
utils/console/include/console/: console.hpp
utils/console/src/: console.cpp
utils/database/: CMakeLists.txt  package.xml
utils/database/include/database/: database.hpp
utils/database/src/: database.cpp  db_clean.cpp  db_test.cpp
utils/features/: CMakeLists.txt  package.xml  setup.py
utils/features/include/features/: shades.hpp  spatial.hpp  visual.hpp
utils/features/scripts/features/: spatial_3d.py
utils/features/src/: color_features.cpp  keypoint_features.cpp  spatial_features.cpp  visual.cpp
utils/ml/: CMakeLists.txt  README.md  package.xml  svm.yml
utils/ml/include/ml/: ml.hpp
utils/ml/src/: dataset.cpp  ml_cv2.cpp  ml_cv3.cpp  ml_test.cpp
(+296 files in other folders)
