<?xml version="1.0"?>
<package>
  <name>anchoring</name>
  <version>0.0.0</version>
  <description>The anchoring package</description>
  <maintainer email="andreas.persson@oru.se">Andreas Persson</maintainer>
  <license>MIT</license>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="andreas.persson@oru.se">Andreas Persson</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>anchor_msgs</build_depend>
  <build_depend>anchor_utils</build_depend> <!-- Database dependencies -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>inference</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostime</build_depend>

  <run_depend>anchor_msgs</run_depend>
  <run_depend>anchor_utils</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>inference</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostime</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
